# salaryammanbot

./: README.md  __init__.py  bot.py  pyproject.toml  requirements.txt  telebot.py
