[project]
name = "salaryammanbot"
version = "0.1.0"
description = "electricity calculator by mones shafeek"
authors = [
    {name = "monesshafeek"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"  # تأكد من هذا السطر
dependencies = ["aiogram (>=3.20.0.post0,<4.0.0)", "openpyxl (>=3.1.5,<4.0.0)"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
